条件分岐とループ

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <title>Vue.jsチュートリアル</title>
 </head>
 <body>
@@ -21,6 +20,21 @@
     </span>
   </div>
 
+  <div id="app-3">
+    <!-- v-if:DOMに条件ifをつける -->
+    <span v-if="seen">Now you see me</span>
+  </div>
+
+  <div id="app-4">
+    <ol>
+      <!-- v-for:DOMに配列内のデータを１つずつ取り出して表示 -->
+      <li v-for="todo in todos">
+        {{todo.text}}
+      </li>
+    </ol>
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
