インスタンス生成、ローカルストレージ設定

--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ToDo_list</title>
+  <title>Vue.js_ToDo_list</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <div id="app">
+    <!-- 絞り込みラジオボタン -->
+    <!-- todoテーブル -->
+    <!-- 新規作成フォーム -->
+  </div>
 
-  <!-- 新しいバージョンによる意図しない不具合を避けるため、特定のバージョン番号とビルド番号にリンクする -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <script src="main.js"></script>
 </body>
