--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -11,6 +11,19 @@
   <div id="app">
     <!-- 絞り込みラジオボタン -->
     <!-- todoテーブル -->
+    <table>
+      <thead>
+        <tr>
+          <th class="id">ID</th>
+          <th class="comment">コメント</th>
+          <th class="state">状態</th>
+          <th class="button">-</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- todoの要素を一行ずつ繰り返し表示する -->
+      </tbody>
+    </table>
     <!-- 新規作成フォーム -->
   </div>
 
