--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -26,10 +26,12 @@
           <th>{{item.id}}</th>
           <td>{{item.comment}}</td>
           <td class="state">
-            <button>{{item.state}}</button>
+            <button v-on:click="doChangeState(item)">
+              {{item.state}}
+            </button>
           </td>
           <td class="button">
-            <button>削除</button>
+            <button v-on:click.shift="doRemove(item)">削除</button>
           </td>
         </tr>
       </tbody>
