--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -10,6 +10,12 @@
 <body>
   <div id="app">
     <!-- 絞り込みラジオボタン -->
+    <label v-for="label in options">
+      <input type="radio"
+        v-model="current"
+        v-bind:value="label.value">{{label.label}}
+    </label>
+    <p>{{conputedTodos.length}}件を表示中</p>
     <!-- todoテーブル -->
     <table>
       <thead>
@@ -22,7 +28,7 @@
       </thead>
       <tbody>
         <!-- todoの要素を一行ずつ繰り返し表示する -->
-        <tr v-for="item in todos" v-bind:key="item.id">
+        <tr v-for="item in conputedTodos" v-bind:key="item.id">
           <th>{{item.id}}</th>
           <td>{{item.comment}}</td>
           <td class="state">
